cc_test(
  name = "robotcar_test",
  size = "small",
  srcs = ["main.cpp", "Mode.h", "Controller.h", "Controller.cpp", "Drive.h", "Drive.cpp", "Mock.h", "Pinger.h", "Pinger.cpp",
		"Servo.h", "Servo.cpp", "ServoWrapper.h", "ServoWrapper.cpp", "Turret.h", "Turret.cpp"],
  deps = ["@com_google_googletest//:gtest_main"],
)
